@@ -1,6 +1,7 @@
 06/01/2004 - 1.8.2-WIP
 	- Compile fixes for DJGPP. (Chrisophe Grenier, me)
 	- Add compatibility for building on FreeBSD. (Christophe Grenier)
+	- Add new compile target "make libs" which only compiles libntfs.
 
 06/01/2004 - 1.8.1 - Important bug fix and various enhancements.
 	- Add new API function attrib.[hc]:ntfs_attr_map_whole_runlist().
